Hardcoded urls deleted

--- a/recipes/templates/about_author.html
+++ b/recipes/templates/about_author.html
@@ -1,6 +1,6 @@
 <div class="custom-center-block">
   <p class="custom-text-block">Константин Торновский - студент Yandex.Practicum  факультета бекэнд разработки.</p>
   <div class="custom-button-block">
-    <a href="/" class="button button_style_blue">Перейти на главную</a>
+    <a href={% url 'index' %} class="button button_style_blue">Перейти на главную</a>
   </div>
 </div>
