--- a/recipes/templates/about_technologies.html
+++ b/recipes/templates/about_technologies.html
@@ -2,6 +2,6 @@
   <p class="custom-text-block">При разработке бекэнда проекта использовался веб фреймворк Django и Django REST framework.</p>
   <p class="custom-text-block">Фронтэнд проекта был подготовлен студентами веб-факультета Яндекс.Практикума.</p>
   <div class="custom-button-block">
-    <a href="/" class="button button_style_blue">Перейти на главную</a>
+    <a href={% url 'index' %} class="button button_style_blue">Перейти на главную</a>
   </div>
 </div>
