--- a/templates/misc/404.html
+++ b/templates/misc/404.html
@@ -11,14 +11,14 @@
 {% block content %}
 
   <div class="main__header">
-    <h1 class="main__title">Сброс пароля</h1>
+    <h1 class="main__title">404</h1>
   </div>
   <div class="custom-center-block">
     <p class="custom-text-block">
-      Информация о сбросе пароля направлена на ваш электронный ящик.
+      Страница не найдена. Напишите мне об этом, если ошибка повториться.
     </p>
     <div class="custom-button-block">
-      <a href={% url 'index' %} class="button button_style_blue">Перейти на главную</a>
+      <a href={% url 'index' %} class="button button_style_blue">На главную</a>
     </div>
   </div>
 
