--- a/recipes/templates/recipes/favorites.html
+++ b/recipes/templates/recipes/favorites.html
@@ -25,13 +25,13 @@
   <div class="card-list">
 
     {% for recipe in page %}
-      {% include "recipes/recipe_index_card.html" with recipe=recipe %}
+      {% include "recipes/includes/recipe_index_card.html" with recipe=recipe %}
     {% endfor %}
 
   </div>
 
   {% if page.has_other_pages %}
-    {% include "paginator.html" with page=page paginator=paginator %}
+    {% include "includes/paginator.html" with page=page paginator=paginator %}
   {% endif %}
 
 {% endblock %}
