--- a/recipes/templates/recipes/followings.html
+++ b/recipes/templates/recipes/followings.html
@@ -51,7 +51,7 @@
   </div>
 
   {% if page.has_other_pages %}
-    {% include "paginator.html" with page=page paginator=paginator %}
+    {% include "includes/paginator.html" with page=page paginator=paginator %}
   {% endif %}
 
 {% endblock %}
