--- a/templates/base.html
+++ b/templates/base.html
@@ -16,14 +16,14 @@
   </head>
   <body class="body">
 
-    {% include 'header.html' %}
+    {% include 'includes/header.html' %}
 
     <main class="main container">
       {% block content %}
       {% endblock %}
     </main>
 
-    {% include 'footer.html' %}
+    {% include 'includes/footer.html' %}
 
     {% block scripts %}{% endblock%}
 
