--- a/templates/includes/paginator.html
+++ b/templates/includes/paginator.html
@@ -22,14 +22,14 @@
         </li>
       {% else %}
         <li class="pagination__item">
-          <a class="pagination__link link" href="?page={{ page_number }}&tags={{ tags|list_to_string }}">{{ page_number }}</a>
+          <a class="pagination__link link" href="?page={{ page_number }}&tags={{ tags|join:"," }}">{{ page_number }}</a>
         </li>
       {% endif %}
     {% endfor %}
 
     {% if page.has_next %}
       <li class="pagination__item">
-        <a class="pagination__link link" href="?page={{ page.next_page_number }}&tags={{ tags|list_to_string }}">
+        <a class="pagination__link link" href="?page={{ page.next_page_number }}&tags={{ tags|join:"," }}">
           <span class="icon-right"></span>
         </a>
       </li>
