--- a/users/templates/signup.html
+++ b/users/templates/signup.html
@@ -20,16 +20,26 @@
           <label for="id_first_name" class="form__label">Имя</label>
           <div class="form__field-group">
             <input type="text" name="first_name" id="id_first_name" class="form__input">
-            <span class="form__error"></span>
+            {% if form.first_name.errors %}
+              {% for error in form.first_name.errors %}
+                <span class="form__error">
+                  {{ error }}
+                </span>
+              {% endfor %}
+            {% endif %}
           </div>
         </div>
         <div class="form__group">
           <label for="id_username" class="form__label">Имя пользователя</label>
           <div class="form__field-group">
             <input type="text" name="username" id="id_username" class="form__input">
-            <span class="form__error">
-              Имя пользователя и пароль не совпадают. Введите правильные данные.
-            </span>
+            {% if form.username.errors %}
+              {% for error in form.username.errors %}
+                <span class="form__error">
+                  {{ error }}
+                </span>
+              {% endfor %}
+            {% endif %}
           </div>
         </div>
         <div class="form__group">
@@ -38,14 +48,26 @@
           </label>
           <div class="form__field-group">
             <input type="email" name="email" id="id_email" class="form__input">
-            <span class="form__error"></span>
+            {% if form.email.errors %}
+              {% for error in form.email.errors %}
+                <span class="form__error">
+                  {{ error }}
+                </span>
+              {% endfor %}
+            {% endif %}
           </div>
         </div>
         <div class="form__group">
           <label for="id_password1" class="form__label">Пароль</label>
           <div class="form__field-group">
             <input type="password" name="password1" id="id_password" class="form__input">
-            <span class="form__error"></span>
+          {% if form.password1.errors %}
+            {% for error in form.password1.errors %}
+              <span class="form__error">
+                {{ error }}
+              </span>
+            {% endfor %}
+          {% endif %}
           </div>
         </div>
         <div class="form__footer">
