Added user parameters check in api app

--- a/recipes/templates/recipes/favorites.html
+++ b/recipes/templates/recipes/favorites.html
@@ -5,6 +5,7 @@
 {% block title %} Избранное {% endblock %}
 
 {% block content %}
+  {% csrf_token %}
   <div class="main__header">
     <h1 class="main__title">{{ request.user.get_full_name }}</h1>
     <ul class="tags">
