Moved form.css to new directory

--- a/users/templates/registration/password_change_form.html
+++ b/users/templates/registration/password_change_form.html
@@ -5,7 +5,7 @@
 {% block title %}Изменить пароль{% endblock %}
 
 {% block styles %}
-  <link rel="stylesheet" href={% static 'pages/form.css' %}>
+  <link rel="stylesheet" href={% static 'users/pages/form.css' %}>
 {% endblock %}
 
 {% block content %}
