--- a/recipes/templates/recipes/new_recipe.html
+++ b/recipes/templates/recipes/new_recipe.html
@@ -6,7 +6,7 @@
 {% block title %}Создание рецепта{% endblock %}
 
 {% block styles %}
-  <link rel="stylesheet" href={% static 'pages/form.css' %}>
+  <link rel="stylesheet" href={% static 'recipes/pages/form.css' %}>
 {% endblock %}
 
 {% block content %}
