--- a/recipes/templates/recipes/recipe_card.html
+++ b/recipes/templates/recipes/recipe_card.html
@@ -6,7 +6,7 @@
 {% block title %}{{ recipe.title }}{% endblock %}
 
 {% block styles %}
-  <link rel="stylesheet" href={% static 'pages/single.css' %}>
+  <link rel="stylesheet" href={% static 'recipes/pages/single.css' %}>
 {% endblock %}
 
 
