Code review bugfix

--- a/recipes/templates/recipes/new_recipe.html
+++ b/recipes/templates/recipes/new_recipe.html
@@ -27,7 +27,13 @@
         <label for={{ form.title.id_for_label }} class="form__label">{{ form.title.label }}</label>
         <div class="form__field-group">
           {{ form.title|add_class:"form__input" }}
-          <span class="form__error"></span>
+          {% if form.title.errors %}
+            {% for error in form.title.errors %}
+              <span class="form__error">
+                {{ error }}
+              </span>
+            {% endfor %}
+          {% endif %}
         </div>
       </div>
       <div class="form__group">
@@ -61,7 +67,6 @@
                 <label for="id_dinner" class="tags__label">Ужин</label>
               </div>
             {% endif %}
-
           </div>
           <span class="form__error"></span>
         </div>
@@ -95,7 +100,6 @@
           <span class="form__ingredient-link" id="addIng">
             Добавить ингредиент
           </span>
-          <span class="form__error"></span>
         </div>
       </div>
       <div class="form__group">
@@ -105,7 +109,13 @@
         <div class="form__field-group form__field-group_time">
           {{ form.cooking_time|add_class:"form__input" }}
           <label for={{ form.cooking_time.id_for_label }} class="form__label">минут</label>
-          <span class="form__error"></span>
+          {% if form.cooking_time.errors %}
+            {% for error in form.cooking_time.errors %}
+              <span class="form__error">
+                {{ error }}
+              </span>
+            {% endfor %}
+          {% endif %}
         </div>
       </div>
       <div class="form__group">
@@ -114,7 +124,13 @@
         </label>
         <div class="form__field-group">
           {{ form.description|add_class:"form__textarea" }}
-          <span class="form__error"></span>
+          {% if form.description.errors %}
+            {% for error in form.description.errors %}
+              <span class="form__error">
+                {{ error }}
+              </span>
+            {% endfor %}
+          {% endif %}
         </div>
       </div>
       <div class="form__group">
@@ -122,8 +138,21 @@
         <div class="form__field-group">
           {{ form.image }}
           <input type="file" class="form__file" name="file" accept="image/*" id="id_file">
-          <span class="form__error"></span>
+          {% if form.image.errors %}
+            {% for error in form.image.errors %}
+              <span class="form__error">
+                {{ error }}
+              </span>
+            {% endfor %}
+          {% endif %}
         </div>
+      </div>
+      <div class="form__group">
+        {% if form.non_field_errors %}
+          {% for error in form.non_field_errors %}
+            <span class="form__error">{{ error }}</span>
+          {% endfor %}
+        {% endif %}
       </div>
       <div class="form__footer">
         {% if request.resolver_match.url_name == 'new_recipe' %}
