--- a/recipes/templates/recipes/followings.html
+++ b/recipes/templates/recipes/followings.html
@@ -43,7 +43,9 @@
           </ul>
         </div>
         <div class="card-user__footer">
-          <button class="button button_style_light-blue button_size_auto" name="subscribe">Отписаться</button>
+          <a href={% url 'followings' %}>
+            <button class="button button_style_light-blue button_size_auto" name="subscribe">Отписаться</button>
+          </a>
         </div>
       </div>
     {% endfor %}
