--- a/recipes/templates/recipes/recipes.html
+++ b/recipes/templates/recipes/recipes.html
@@ -17,7 +17,7 @@
   {% if author and request.user.is_authenticated %}
     <div class="author-subscribe" data-author={{ author.id }}>
       <p style="padding: 0 0 2em 0;">
-        {% if request.user|is_follower %}
+        {% if request.user|is_follower:author %}
           <button class="button button_style_light-blue button_size_subscribe" name="subscribe">
             Отписаться от автора
           </button>
